fix ResourceNotFound test and dont sell finished travels